--- a/Clean Data.ipynb
+++ b/Clean Data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,10 +37,10 @@
     "#             print(result)\n",
     "\n",
     "connection_options = {\n",
-    "   'host': '10.227.243.6',\n",
-    "   'user': 'groupK',\n",
-    "   'password': 'm$uSI!cA',\n",
-    "   'database': 'groupK',\n",
+    "   'host': 'localhost',\n",
+    "   'user': 'root',\n",
+    "   'password': 'Katchin98',\n",
+    "   'database': 'adad',\n",
     "}\n",
     "\n",
     "connection = pymysql.connect(**connection_options)\n",
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +115,7 @@
        "10526"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
