Transformation almost ready, create tables ready

--- a/Clean Data.ipynb
+++ b/Clean Data.ipynb
@@ -106,23 +106,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "10526"
+       "array([3, 5])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "len(df)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
